# Rusky.old

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  Rusky.example.toml
.github/workflows/: rust.yml
core/: Cargo.toml
core-macros/: Cargo.toml
locales/br/commands/: userinfo.yml
locales/common/commands/: userinfo.yml
src/: apis.rs  commands.rs  config.rs  constants.rs  containers.rs  events.rs  hooks.rs  lib.rs  macros.rs  main.rs  models.rs  rusky.rs  typings.rs  util.rs
src/apis/: covid19_brazil_api.rs  discord.rs  meow.rs  mod.rs
src/commands/: information.rs  misc.rs  mod.rs  moderation.rs  utils.rs
src/config/: mod.rs
src/constants/: colors.rs  emotes.rs  mod.rs
src/containers/: mod.rs
src/errors/: mod.rs
src/events/: mod.rs
src/utils/: guild.rs  message.rs  mod.rs  time.rs  user.rs
y18n/: Cargo.toml
y18n/src/: lib.rs
