[package]
name = "rusky"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
fern = "0.5.2"
chrono = "0.4"
rustc_version = "0.4.0"
sysinfo = "0.18.2"
humansize = "1.1.1"
rand = "0.8.4"
surf = "2.2.0"
log = "0.4.14"
serde_json = "1.0"
fasteval = "0.2.4"
yansi = "0.5.0"
futures = "0.3.15"
prettytable-rs = "0.8.0"
clap = "2.33.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
default-features = false
features = ["client", "collector",  "gateway" ,"rustls_backend", "model", "unstable_discord_api"]

[dependencies.tokio]
version = "1.6.1"
features = ["macros", "signal", "rt-multi-thread"]
