cargo-features = ["edition2021"]
[package]
name = "rusky"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.5"
fern = "0.5.2"
chrono = "0.4"
# rustc_version = "0.4.0"
# sysinfo = "0.18.2"
# humansize = "1.1.1"
hex = "0.4.3"
rand = "0.8.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
log = "0.4.14"
serde_json = "1.0"
fasteval = "0.2.4"
yansi = "0.5.0"
futures = "0.3.15"
prettytable-rs = "0.8.0"
clap = "2.33.3"
[dependencies.y18n]
path = "./y18n"
[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
default-features = false
features = ["client", "collector", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api"]

[dependencies.tokio]
version = "1.6.1"
features = ["macros", "signal", "rt-multi-thread"]
[profile.release]
incremental = true
[profile.dev]
incremental = true
[dev-dependencies]
tokio-test = "0.4.2"
